--- a/src/client/components/GameLayout/GameLayout.module.css
+++ b/src/client/components/GameLayout/GameLayout.module.css
@@ -36,6 +36,7 @@
 
 .mainContent {
   grid-area: main;
+  position: relative; /* Establish positioning context for children */
   z-index: 1;
   display: flex;
   justify-content: center;
